Dodanie blibliotek statycznych po wiecej informacji patrz plik o nazwie README.md

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,3 @@
 AUTOMAKE_OPTIONS = foreign
 
-bin_PROGRAMS = program
-
-program_SOURCES = main.cpp pole.cpp objetosc.cpp
-
-EXTRA_DIST = pole.h objetosc.h
+SUBDIRS = headers src
