--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,5 +4,5 @@ pkginclude_HEADERS = ../headers/pole.h ../headers/objetosc.h
 
 bin_PROGRAMS = program
 
-program_LDADD = ../headers/libpole.a ../headers/libobjetosc.a
+program_LDADD = ../headers/libpole.a ../headers/libobjetosc.la
 program_SOURCES = main.cpp
