--- a/headers/Makefile.am
+++ b/headers/Makefile.am
@@ -2,7 +2,9 @@ EXTRA_DIST = pole.h objetosc.h
 
 AM_CPPFLAGS = -I
 
-noinst_LIBRARIES = libpole.a libobjetosc.a
+noinst_LIBRARIES = libpole.a
+
+lib_LTLIBRARIES = libobjetosc.la
 
 libpole_a_SOURCES = ../src/pole.cpp
-libobjetosc_a_SOURCES = ../src/objetosc.cpp
+libobjetosc_la_SOURCES = ../src/objetosc.cpp
